--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- cssupp -->
     <link rel="stylesheet" href="style.css" />
     <!-- endcssupp -->
-    <title>Portofolio | Uplahh</title>
+    <title>Portofolio | Muhammad Aflah Aulia</title>
   </head>
   <body id="home">
     <!-- navbar -->
@@ -57,6 +57,7 @@
       </svg>
     </section>
     <!-- end jumbotron -->
+
     <!-- about -->
     <section id="about">
       <div class="container">
@@ -83,6 +84,7 @@
       </svg>
     </section>
     <!-- akhir about -->
+
     <!-- Project -->
     <section id="projects">
       <div class="container">
@@ -138,7 +140,7 @@
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,128L21.8,144C43.6,160,87,192,131,218.7C174.5,245,218,267,262,250.7C305.5,235,349,181,393,144C436.4,107,480,85,524,80C567.3,75,611,85,655,122.7C698.2,160,742,224,785,250.7C829.1,277,873,267,916,250.7C960,235,1004,213,1047,202.7C1090.9,192,1135,192,1178,165.3C1221.8,139,1265,85,1309,101.3C1352.7,117,1396,203,1418,245.3L1440,288L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"></path></svg>
     </section>
     <!--akhir project  -->
-    
+
     <!-- Contact -->
     <section id="contact">
       <div class="container">
