mengubah title bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- cssupp -->
     <link rel="stylesheet" href="style.css" />
     <!-- endcssupp -->
-    <title>Portofolio | Muhammad Aflah Aulia</title>
+    <title>Portofolio | Aflah</title>
   </head>
   <body id="home">
     <!-- navbar -->
