mengubah isi lead class

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="jumbotron text-center">
       <img src="img/WhatsApp Image 2022-03-17 at 20.58.48.jpeg" alt="uplahh" width="250" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Muhammad Aflah Aulia</h1>
-      <p class="lead">Saya Merupakan Mahasiswa aktif</p>
+      <p class="lead">Saya merupakan mahasiswa aktif dari sebuah perguruan tinggi swasta di daerah Tangerang</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#fff"
